# powerpack

./: .gitignore  CMakeLists.txt  ControlModule.h  Controller.cpp  PWM.cpp  Powerpack.cpp  Powerpack.h  README.md  Sensor.cpp  main.cpp  package.xml
config/: PID_config.yaml  config.yaml
include/: ControlModule.h  Controller.h  DatabaseConfig.h  Dynamics.h  PWM.h  Powerpack.h  QP.h  ReferenceGoverner.h  Sensor.h  Solver.h  Solver_backup.h  Units.h  Valve.h  test.h
launch/: powerpack_control.launch
scripts/GUI/: ros_gui.py
scripts/graph/: pressure_plot_node.py
scripts/inout/: output_integrator.py  pwm_output.py  reference_input.py  sensor_input.py  tmp.py
src/: ControlModule.cpp  Controller.cpp  DatabaseConfig.cpp  Dynamics.cpp  PWM.cpp  PosNegPIDController.cpp  Powerpack.cpp  QP.cpp  ROSGoverner.cpp  ReferenceGoverner.cpp  Sensor.cpp  Solver.cpp  Solver_backup.cpp  Valve.cpp  main.cpp  ref_values_publisher.cpp  talker.cpp  test.cpp
